Modify scheama
