# app/controllers/guests_controller.rb
@@ -5,7 +5,7 @@ class GuestsController < ApplicationController
     guest = Guest.find_by(invite_code: params[:invite_id])
     return render status: :not_found if guest.nil?
 
-    render json: { guest: guest.redacted }
+    render json: guest.redacted
   end
 
   def update
